force-app/main/default/objects/Skill_Claim__c/Skill_Claim__c.object-meta.xml
<CustomObject>
    <description>Practitioner capability claim and immutable manager decision evidence.</description>
    <label>Skill Claim</label>
    <nameField>
        <displayFormat>CLM-{00000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>