force-app/main/default/objects/Skill_Claim__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Capability</label>
    <referenceTo>Capability__c</referenceTo>
    <relationshipLabel>Skill Claims</relationshipLabel>
    <relationshipName>Skill_Claims</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>