force-app/main/default/objects/Skill_Claim__c/fields/Decay_Status__c.field-meta.xml
<CustomField><fullName>Decay_Status__c</fullName><description>Capability freshness and decay classification.</description><label>Decay Status</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Current</fullName><default>false</default><label>Current</label></value><value><fullName>Review Due</fullName><default>false</default><label>Review Due</label></value><value><fullName>Stale</fullName><default>false</default><label>Stale</label></value><value><fullName>Revalidation Required</fullName><default>false</default><label>Revalidation Required</label></value></valueSetDefinition></valueSet></CustomField>