force-app/main/default/objects/Skill_Claim__c/fields/Decision_Note__c.field-meta.xml
<CustomField>
    <fullName>Decision_Note__c</fullName>
    <label>Decision Note</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>