force-app/main/default/objects/Skill_Claim__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>Evidence</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>