force-app/main/default/objects/Skill_Claim__c/fields/Freshness_Days__c.field-meta.xml
<CustomField><fullName>Freshness_Days__c</fullName><description>Days since the capability was last used or revalidated.</description><label>Freshness Days</label><precision>7</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>