force-app/main/default/objects/Skill_Claim__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <externalId>true</externalId>
    <label>Idempotency Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>