force-app/main/default/objects/Skill_Claim__c/fields/Last_Used__c.field-meta.xml
<CustomField>
    <fullName>Last_Used__c</fullName>
    <label>Last Used</label>
    <type>Date</type>
</CustomField>