force-app/main/default/objects/Skill_Claim__c/fields/Request_Fingerprint__c.field-meta.xml
<CustomField><fullName>Request_Fingerprint__c</fullName><label>Request Fingerprint</label><length>64</length><type>Text</type></CustomField>