force-app/main/default/objects/Skill_Claim__c/fields/Requested_Level__c.field-meta.xml
<CustomField>
    <fullName>Requested_Level__c</fullName>
    <label>Requested Level</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>