force-app/main/default/objects/Skill_Claim__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Skill Claims</relationshipLabel>
    <relationshipName>Skill_Claims</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>