force-app/main/default/objects/Skill_Claim__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviewed Skill Claims</relationshipLabel>
    <relationshipName>Reviewed_Skill_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>