force-app/main/default/objects/Skill_Claim__c/fields/Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_Experience__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Years of Experience</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>