force-app/main/default/objects/Skill_Claim__c/validationRules/Approved_Claim_Has_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Claim_Has_Level</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(State__c, &quot;Approved&quot;), ISBLANK(Approved_Level__c))</errorConditionFormula>
    <errorMessage>An approved skill claim requires an approved level.</errorMessage>
</ValidationRule>