force-app/main/default/objects/Skill_Claim__c/validationRules/Skill_Levels.validationRule-meta.xml
<ValidationRule>
    <fullName>Skill_Levels</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Requested_Level__c &lt; 1, Requested_Level__c &gt; 4, AND(NOT(ISBLANK(Approved_Level__c)), OR(Approved_Level__c &lt; 1, Approved_Level__c &gt; 4)))</errorConditionFormula>
    <errorMessage>Requested and approved proficiency levels must be between 1 and 4.</errorMessage>
</ValidationRule>